--- a/.npmignore
+++ b/.npmignore
@@ -9,6 +9,7 @@ coverage
 examples
 node_modules
 coverage
+example
 
 .npmignore
 .gitignore
@@ -17,4 +18,5 @@ coverage
 tsconfig.json
 tsconfig.prod.json
 tslint.json
+.nyc_output
 .nycrc
